Assignment2_Zhao_Duo/tests/automated/tests/good/ScientificNotationLittleBland-0.calc
a .0e23 b 1.e25 c 2.3e31 d 34.5e45 e 6.78e73 f 99.99e56 g 3e93 h 76e45
