Assignment2_Zhao_Duo/tests/automated/tests/bad/ScientificNotationLittleBlandWithBadCharacters-0.calc
a .0%e23 b 1.%e25 c 2.3%e31 d 34.5%e45 e 6.78%e73 f 99.99%e56 g 3%e93 h 76%e45
